[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmp180"
version = "0.1.0"
description = "A Python library for BMP180 pressure and temperature sensor."
readme = "README.md"
authors = [{ name = "7L2VKS" },]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "smbus2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
